fix gallery path

--- a/_includes/album.html
+++ b/_includes/album.html
@@ -1,9 +1,9 @@
 <div id="{{include.albumname}}">
 
     {% for image in site.static_files %}
-        {% if image.path contains 'images/galleryv2' and image.path contains include.albumname %}
+        {% if image.path contains 'assets/galleries' and image.path contains include.albumname %}
             <a href="{{ image.path }}" data-sub-html="{% exiftag image_description, , {{ image.path }} %}" >
-                <img src="/thumbnails{{ image.path }}" />
+                <img src="/assets/thumbnails{{ image.path }}" />
             </a>
         {% endif %}
     {% endfor %}
