fix thumbnail path

--- a/_includes/album.html
+++ b/_includes/album.html
@@ -3,7 +3,7 @@
     {% for image in site.static_files %}
         {% if image.path contains 'assets/galleries' and image.path contains include.albumname %}
             <a href="{{ image.path }}" data-sub-html="{% exiftag image_description, , {{ image.path }} %}" >
-                <img src="/assets/thumbnails{{ image.path }}" />
+                <img src="/thumbnails{{ image.path }}" />
             </a>
         {% endif %}
     {% endfor %}
