--- a/_layouts/gallery.htm
+++ b/_layouts/gallery.htm
@@ -1,5 +1,6 @@
 ---
 layout: page
+wide-mode: true
 ---
 
 <a href="{{ page.parent.url | relative_url }}">
@@ -31,4 +32,4 @@ layout: page
     <!-- <figcaption itemprop="caption description">Image caption</figcaption> -->
   </figure>
 {%- endfor -%}
-</div>
+</div>  
