--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -16,11 +16,17 @@ full-width: true
 
 {% assign number_of_posts = 0 %}
 {% for post in site.posts %}
-    {% if post.authors contains page.username or page.username == post.authors %}
+    {% if post.authors contains page.username or page.username == post.author %}
         {% assign number_of_posts = number_of_posts | plus: 1 %}
     {% endif %}
 {% endfor %}
 {% if number_of_posts == 0 %}No posts{% elsif number_of_posts == 1 %}1 post{% else %}{{ number_of_posts }} posts{% endif %}
+
+{% for post in site.posts %}
+    {% if post.authors contains page.username or page.username == post.author %}
+        <a href="{{ site.url }}{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
+    {% endif %}
+{% endfor %}
 
 {% if page.twitter %}
     <a href="https://twitter.com/{{ page.twitter }}" target="_blank" rel="noopener">
