--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -1,10 +1,10 @@
 ---
-layout: page
+layout: default
 full-width: true
 ---
 
 {% if page.picture %}
-    <img class="author-profile-image" src="/{{ page.picture }}" alt="{{ page.name }}" />
+    <center><img class="author-profile-image" src="/{{ page.picture }}" alt="{{ page.name }}" /></center>
 {% endif %}
 <h1 class="site-title">{{ page.name }}</h1>
 {% if page.bio %}
@@ -22,11 +22,13 @@ full-width: true
 {% endfor %}
 {% if number_of_posts == 0 %}No posts{% elsif number_of_posts == 1 %}1 post{% else %}{{ number_of_posts }} posts{% endif %}
 
+<ul>
 {% for post in site.posts %}
     {% if post.authors contains page.username or page.username == post.author %}
-        <a href="{{ site.url }}{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
+       <li> <a href="{{ site.url }}{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
     {% endif %}
 {% endfor %}
+</ul>
 
 {% if page.twitter %}
     <a href="https://twitter.com/{{ page.twitter }}" target="_blank" rel="noopener">
