--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -4,7 +4,7 @@ full-width: true
 ---
 
 {% if page.picture %}
-    <center><img class="author-profile-image" src="/{{ page.picture }}" alt="{{ page.name }}" /></center>
+    <center><img class="author-profile-image" src="/{{ page.picture }}" alt="{{ page.name }}" width="500" height="500" /></center>
 {% endif %}
 <h1 class="site-title">{{ page.name }}</h1>
 {% if page.bio %}
