--- a/_layouts/gallery_page.html
+++ b/_layouts/gallery_page.html
@@ -22,7 +22,7 @@ full-width: true
 <a href="/{{ site.gallery.dir }}">
   <span class="fa-stack fa-lg" aria-hidden="true">
     <i class="fas fa-circle fa-stack-2x"></i>
-    <i class="fas fa-left-arrow fa-stack-1x fa-inverse"></i>
+    <i class="fas fa-arrow-left fa-stack-1x fa-inverse"></i>
   </span>
 </a>
 <hr />
