--- a/_includes/light-dark.html
+++ b/_includes/light-dark.html
@@ -1,4 +1,14 @@
+&nbsp; &nbsp; 
 <div id="change-skin" title="Toggle Night Mode">
   <span class="skin-btn dark-mode">🌙</span>
   <span class="skin-btn light-mode">☀️</span>
 </div>
+
+// Select the button
+const btn = document.querySelector('.btn-toggle');
+
+// Listen for a click on the button
+btn.addEventListener('click', function() {
+  // Then toggle (add/remove) the .dark-theme class to the body
+  document.body.classList.toggle('dark-theme');  
+})
