--- a/_layouts/gallery_page.html
+++ b/_layouts/gallery_page.html
@@ -20,10 +20,12 @@ full-width: true
 }
 </style>
 <a href="/{{ site.gallery.dir }}">
-  <span class="fa-stack fa-lg" aria-hidden="true">
-    <i class="fas fa-circle fa-stack-2x"></i>
-    <i class="fas fa-arrow-left fa-stack-1x fa-inverse"></i>
-  </span>
+  <li class="page-item next">
+    <span class="fa-stack fa-lg" aria-hidden="true">
+      <i class="fas fa-circle fa-stack-2x"></i>
+      <i class="fas fa-arrow-left fa-stack-1x fa-inverse"></i>
+    </span>
+  </li>
 </a>
 <hr />
 {% for image in page.images %}
