--- a/_layouts/gallery_index.html
+++ b/_layouts/gallery_index.html
@@ -12,7 +12,7 @@ full-width: true
   max-height: 20em;
   max-width: 20em;
 }
-</style>
+</style><span class="gallery-span">
 {% for gallery in page.galleries %}
 <div class="gallery-wrapper">
     <a href="{{ gallery['gallery'] }}">
@@ -22,3 +22,4 @@ full-width: true
     {{ gallery["images"] | size }} image{% if gallery["images"].size != 1 %}s{% endif %}
 </div>
 {% endfor %}
+</span>
