--- a/_layouts/gallery_page.html
+++ b/_layouts/gallery_page.html
@@ -3,22 +3,28 @@ layout: page
 full-width: true
 ---
 <style TYPE="text/css">
-.gallery-image-wrapper {
-  height: 300px;
-  width: 300px;
-  display: inline-block;
-  margin: 1em;
-  position: relative;
+div.gallery {
+  margin: 5px;
+  border: 1px solid #ccc;
+  float: left;
+  width: 180px;
 }
-.gallery-image {
-  margin: auto;
-  position: absolute;
-  top: 0px;
-  bottom: 0px;
-  max-height: 100%;
-  max-width: 100%;
+
+div.gallery:hover {
+  border: 1px solid #777;
+}
+
+div.gallery img {
+  width: 100%;
+  height: auto;
+}
+
+div.desc {
+  padding: 15px;
+  text-align: center;
 }
 </style>
+
 <a href="/{{ site.gallery.dir }}">
   <li class="page-item next">
     <span class="fa-stack fa-lg" aria-hidden="true">
@@ -28,11 +34,14 @@ full-width: true
   </li>
 </a>
 <hr />
+
 {% for image in page.images %}
-    <div class="gallery-image-wrapper">
-        <a name="{{ image.name }}"></a>
-        <a href="{{ image.name }}"{% if site.gallery.lightbox %} rel="lightbox[{{ page.gallery }}]"{% endif %}>
-            <img class="gallery-image" src="thumbs/{{ image.name }}" />
-        </a>
-    </div>
+<div class="gallery">
+  <a target="_blank" href="{{ image.name }}">
+    <img src="{{ image.name }}" alt="{{ image.name }}" 
+      width="site.gallery.thumbnail_size.x" height="site.gallery.thumbnail_size.y">
+  </a>
+  <div class="desc"><{{ image.name }}/div>
+</div>
+
 {% endfor %}
