--- a/_layouts/gallery_page.html
+++ b/_layouts/gallery_page.html
@@ -4,10 +4,7 @@ full-width: true
 ---
 <style TYPE="text/css">
 div.gallery {
-  margin: 5px;
   border: 1px solid #ccc;
-  float: left;
-  width: 180px;
 }
 
 div.gallery:hover {
@@ -23,6 +20,35 @@ div.desc {
   padding: 15px;
   text-align: center;
 }
+
+* {
+  box-sizing: border-box;
+}
+
+.responsive {
+  padding: 0 6px;
+  float: left;
+  width: 24.99999%;
+}
+
+@media only screen and (max-width: 700px) {
+  .responsive {
+    width: 49.99999%;
+    margin: 6px 0;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .responsive {
+    width: 100%;
+  }
+}
+
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
+}
 </style>
 
 <a href="/{{ site.gallery.dir }}">
@@ -36,12 +62,13 @@ div.desc {
 <hr />
 
 {% for image in page.images %}
-<div class="gallery">
-  <a target="_blank" href="{{ image.name }}">
-    <img src="{{ image.name }}" alt="{{ image.name }}" 
-      width="site.gallery.thumbnail_size.x" height="site.gallery.thumbnail_size.y">
-  </a>
-  <div class="desc"><{{ image.name }}/div>
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="{{ image.name }}">
+      <img src="{{ image.name }}" width="{{ site.gallery.thumbnail_size.x }}" 
+        height="{{ site.gallery.thumbnail_size.x }}">
+    </a>
+    <div class="desc">{ image.name }}</div>
+  </div>
 </div>
-
 {% endfor %}
