--- a/_layouts/gallery_index.html
+++ b/_layouts/gallery_index.html
@@ -57,7 +57,7 @@ div.desc {
       <img src="{{ gallery['gallery'] }}/thumbs/{{ gallery['best_image'] }}" 
       width="{{ site.gallery.thumbnail_size.x }}" height="{{ site.gallery.thumbnail_size.y }}">
     </a>
-    <div class="desc">{{ gallery["name"] }}</div>
+    <div class="desc">{{ gallery["name"] }} {{ site.gallery.thumbnail_size.x }}</div>
   </div>
 </div>
 {% endfor %}
