fix missing </div>

--- a/_layouts/gallery_index.html
+++ b/_layouts/gallery_index.html
@@ -62,8 +62,12 @@ div.imagecount {
       <img src="{{ gallery['gallery'] }}/thumbs/{{ gallery['best_image'] }}" 
       width="{{ site.gallery.thumbnail_size.x }}" height="{{ site.gallery.thumbnail_size.y }}">
     </a>
-    <div class="desc">{{ gallery["name"] }}</div>
-    <div class="imagecount">{{ gallery["images"] | size }} image{% if gallery["images"].size != 1 %}s{% endif %}
+    <div class="desc">
+      {{ gallery["name"] }}
+    </div>
+    <div class="imagecount">
+      {{ gallery["images"] | size }} image{% if gallery["images"].size != 1 %}s{% endif %}
+    </div>
   </div>
 </div>
 {% endfor %}
